--- a/admin.html
+++ b/admin.html
@@ -25,9 +25,9 @@
         </ul>
          <footer class="app-footer">
             <ul class="footer-list">
-                <li><a href="">Task</a></li>
-                <li><a href="">Profile</a></li>
-                <li><a href="">Chat</a></li>
+                <li><a href="admin.html">Task</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="chat.html">Chat</a></li>
             </ul>
         </footer>
     </div>
