--- a/profile.html
+++ b/profile.html
@@ -18,9 +18,9 @@
     <button id="save-button">Save</button>
     <footer class="app-footer">
             <ul class="footer-list">
-                <li><a href="capstone/task">Task</a></li>
-                <li><a href="">Profile</a></li>
-                <li><a href="">Chat</a></li>
+                <li><a href="admin.html">Task</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="chat.html">Chat</a></li>
             </ul>
         </footer>
 </div>
